# rikkahub

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FINAL_ACCEPTANCE_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_TEST_EXECUTION_GUIDE.md  MANUAL_TEST_SCENARIOS.md  PHASE_D_TEST_REPORT.md  README.md  README_ZH_CN.md  README_ZH_TW.md  RECALL_PARAMS_ANALYSIS.md  RESIDUAL_DATA_ANALYSIS.md  build.gradle.kts  build_output.txt  create_table.sql  package.json  settings.gradle.kts  tmpclaude-93f6-cwd  上下文构建逻辑技术报告.md
.claude/: settings.local.json
.claude/commands/: publish-release.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: 123456.yml  release.yml
ai/: README.md  build.gradle.kts
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/baselineprofile/: build.gradle.kts
common/: build.gradle.kts
docs/upstream-audits/: 20260417-2.1.7-upstream-audit.md  (+3 more)
document/: build.gradle.kts  consumer-rules.pro
gradle/: libs.versions.toml
highlight/: build.gradle.kts
locale-tui/: .gitignore  config.yml  pyproject.toml
locale-tui/src/: __init__.py  app.py  config.py  main.py
locale-tui/src/models/: __init__.py  entry.py
locale-tui/src/screens/: __init__.py  module_select.py
locale-tui/src/services/: __init__.py  dead_entry_finder.py  translator.py  xml_parser.py
locale-tui/src/styles/: app.tcss
locale-tui/src/widgets/: __init__.py  edit_modal.py
scripts/: upstream_sync.py
search/: build.gradle.kts
tts/: build.gradle.kts
web-ui/: vite.config.ts
(+620 files in other folders)
