[project]
name = "locale-tui"
version = "0.1.0"
description = "Android Locale Manager - 管理和翻译 Android 字符串资源"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "lxml>=6.0.2",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
locale-tui = "src.main:main"

